package ar.edu.utn.frc.tup.lciii.entities;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import java.time.LocalDateTime;


import java.time.LocalDateTime;

@Entity
@Table(name= "players")
@Data
@AllArgsConstructor
@NoArgsConstructor
public class PlayerEntity {

   @Id
    @GeneratedValue(strategy= GenerationType.IDENTITY)
    private Long id;

    @Column
    private String userName;

    @Column
    private String password;

    @Column
    private String email;

    @Column
    private String avatar;

    @Column
    private LocalDateTime lastLogin;

    @Column
    private LocalDateTime cratedAt;

    @Column
    private LocalDateTime updatedAt;



}
